--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "higher-order-components",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mattj299.github.io/javierWash",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "circletype": "^2.3.0",
+    "gh-pages": "^3.1.0",
     "leaflet": "^1.7.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -18,6 +20,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
